# amagi

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README_zh.md  amagi.config.example.toml  amagi.config.schema.json  biome.jsonc  devdeps.compose.yaml  justfile  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.browser.json  tsconfig.json  tsconfig.scripts.json  vitest.config.ts  zellij-dev.kdl
apps/api-server/: Cargo.toml
apps/api-server/src/: app.rs  error.rs  main.rs
apps/api-server/src/http/routes/: auth.rs  dashboard.rs  health.rs  mod.rs  sync.rs
apps/dashboard-web/: index.html  package.json  vite.config.ts
apps/dashboard-web/src/: App.tsx  api.ts  constants.ts  main.tsx  state.ts  styles.css
apps/dashboard-web/src/__tests__/: api.test.ts  state.test.ts
apps/extension-web/: options.html  package.json  popup.html  tsconfig.json  vite.config.ts  wxt.config.ts
apps/extension-web/entrypoints/: background.ts
apps/extension-web/entrypoints/options/: index.html  main.tsx
apps/extension-web/entrypoints/popup/: index.html  main.tsx
apps/extension-web/scripts/: chrome-extension-smoke.mjs  manifest-smoke.mjs
apps/extension-web/src/: background.ts  manifest.ts  options.tsx  popup.tsx  state.ts
apps/extension-web/src/__tests__/: runtime.test.ts  state.test.ts
apps/extension-web/src/extension/: messaging.ts  runtime.ts  state.ts
apps/extension-web/src/ui/: options.tsx  popup.tsx
dev/dex-config/: config.yaml
docs/: 000-OVERVIEW_zh.md  001-ARCHITECTURE_zh.md  002-DOMAIN-MODEL_zh.md  003-DATABASE_zh.md  004-API_zh.md  005-SYNC_zh.md  006-BROWSER-ADAPTERS_zh.md  007-WEB-UI_zh.md  008-SECURITY_zh.md  009-REPOSITORY-AND-DELIVERY_zh.md
docs/en/: 000-OVERVIEW.md  001-ARCHITECTURE.md  002-DOMAIN-MODEL.md  003-DATABASE.md  004-API.md  005-SYNC.md  006-BROWSER-ADAPTERS.md  007-WEB-UI.md  008-SECURITY.md  009-REPOSITORY-AND-DELIVERY.md
docs/zh/: 000-OVERVIEW.md  001-ARCHITECTURE.md  002-DOMAIN-MODEL.md  003-DATABASE.md  004-API.md  005-SYNC.md  006-BROWSER-ADAPTERS.md  007-WEB-UI.md  008-SECURITY.md  009-REPOSITORY-AND-DELIVERY.md
